# anki_deutsch_a1

./: .gitignore  AGENTS.md  ARTICLE.md  CARD_CONSTRUCTION.md  CHANGELOG.md  CLAUDE.md  CSV_CLEANUP.md  DESIGN-REVIEW.md  DOMAIN_CLEANUP.md  LEGACY.md  LIBRARY_REFACTOR.md  LICENSE  MEDIA_ENRICHER.md  MEDIA_GENERATION_SEQUENCE_DIAGRAM.md  MIGRATION_PLAN.md  README.md  TODO.md  VERBS.md  VERB_CSV_ARCHITECTURE_ANALYSIS.md  b1-production-vocab-csv.txt  check_verb_loading.py  clean_csv_data.py  debug_article_media.py  debug_media_detection.py  debug_media_registration.py  pyproject.toml  pytest.ini  rename_verb_column.py  requirements.txt  simple_media_test.py  simple_negation_test.py  test_article_fix.py  test_articles.apkg  test_combined_audio.py  test_duplicate_fix.py  test_negation_enhancement.py  test_phrase_template.html  test_verb_cards_complete.py  test_verb_detection.py  test_verb_media.py  (+2 more)
.claude/: settings.local.json
.cursor/rules/: line-length-limits.mdc
.github/: pull_request_template.md
.github/workflows/: README.md  ci.yml  ci_updated.yml  manual-integration.yml
data/: adjectives.csv  adverbs.csv  articles.csv  articles_unified.csv  cardinal_numbers.csv  indefinite_articles.csv  interjections.csv  irregular_verbs.csv  negations.csv  negative_articles.csv  nouns.csv  other_pronouns.csv  personal_pronouns.csv  phrases.csv  prepositions.csv  regular_verbs.csv  separable_verbs.csv  verbs_backup_original.csv  verbs_enhanced.csv  verbs_unified.csv
data/german/beginner/: nouns.csv
data/german/default/: conjunctions.csv  negations.csv  nouns.csv  ordinal_numbers.csv  verbs_unified.csv
docs/: ANKI_API_TESTPLAN.md  ANKI_LIBRARY_REFACTOR.md  ANKI_MIGRATION_PLAN.md  BACKEND_MIGRATION_GUIDE.md  BRANCH-WORKFLOW.md  CODE-TYPING.md  DATA-DICTIONARY.md  DESIGN-GUIDANCE.md  DESIGN-INDEX.md  DESIGN-SRP.md  DESIGN-STATE.md  DESIGN.md  DOCUMENTATION-UPDATE-SUMMARY.md  ENG-ARCHITECTURAL-DIAGRAMS.md  ENG-ARCHITECTURE.md  ENG-CODING-STANDARDS.md  ENG-COMPONENT-INVENTORY.md  ENG-DATA-DICTIONARY.md  ENG-DEAD-CODE.md  ENG-DESIGN-INDEX.md  ENG-DEVELOPMENT-GUIDE.md  ENG-DEVELOPMENT-STANDARDS.md  ENG-EXCEPTIONS.md  ENG-PACKAGING.md  ENG-PHASE-4-ACTION-PLAN.md  ENG-PIPELINE.md  ENG-PYTHON-STANDARDS.md  ENG-QUALITY-METRICS.md  ENG-REPACKAGING.md  ENG-SYSTEM-DESIGN.md  ENG-TECHNICAL-DEBT-AUDIT.md  ENG-TECHNICAL-DEBT-STATUS.md  ENG-TECHNICAL-DEBT.md  GERMAN-LANGUAGE-SPEC.md  GITHUB_SECRETS_GUIDE.md  IMPERATIVE-COVERAGE-ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  KOREAN-LANGUAGE-SPEC.md  LEGACY.md  MULTI-LANGUAGE-IMPLEMENTATION-GUIDE.md  (+17 more)
examples/: backend_demonstration.py  deck_builder_demo.py  german_deck_builder_demo.py  media_integration_demo.py  test_new_media.py  verb_card_generation_demo.py
languages/: CSVs.DE_de.md  Grammar.DE_de.md
languages/german/: german_a1_wordlist.txt
languages/german/a1/: adjectives.csv  adverbs.csv  articles_unified.csv  cardinal_numbers.csv  negations.csv  nouns.csv  personal_pronouns.csv  phrases.csv  prepositions.csv  verbs.csv
languages/german/a1.1/: adjectives.csv  adverbs.csv  cardinal_numbers.csv  negations.csv  nouns.csv  personal_pronouns.csv  prepositions.csv  verbs.csv
languages/german/beginner/: articles_unified.csv  phrases.csv  verbs_unified.csv
languages/german/business/: nouns.csv
languages/german/default/: adjectives.csv  phrases.csv  verbs.csv
languages/korean/default/: nouns.csv
languages/russian/basic/: nouns.csv
languages/russian/default/: nouns.csv
scripts/: count_lines.py  migrate_to_lazy_loading.py  simulate_cards.py  test_api_key.py  validate_anki.py
src/langlearn/: create_deck.py  deck_builder.py  genanki.pyi  generator.py  german_deck_builder.py  main.py
src/langlearn/backends/: __init__.py  anki_backend.py  base.py  genanki_backend.py
src/langlearn/cards/: __init__.py  adjective.py  adverb.py  base.py  factory.py  negation.py  noun.py
src/langlearn/core/: __init__.py
src/langlearn/debug/: __init__.py  debug_deck_generator.py
src/langlearn/examples/: __init__.py  create_sample_deck.py
src/langlearn/infrastructure/: __init__.py
src/langlearn/languages/: __init__.py  registry.py
src/langlearn/managers/: __init__.py  deck_manager.py  media_manager.py
src/langlearn/models/: __init__.py  adjective.py  adverb.py  article.py  cardinal_number.py  conjunction.py  field_processor.py  interjection.py  irregular_verb.py  model_factory.py  negation.py  noun.py  ordinal_number.py  other_pronoun.py  personal_pronoun.py  phrase.py  possessive_pronoun.py  preposition.py  records.py  regular_verb.py  separable_verb.py  (+1 more)
tests/: conftest.py  conftest_enhanced.py  test_adjective.py  test_adjective_domain.py  test_adjective_field_processing.py  test_adverb.py  test_adverb_field_processing.py  test_anki_backend_article_cloze_mapping.py  test_anki_backend_bulk_performance.py  test_anki_backend_core.py  test_anki_backend_core_methods.py  test_anki_backend_deduplication.py  test_anki_backend_domain_delegation.py  test_anki_backend_error_handling.py  test_anki_simulator.py  test_anki_validator.py  test_anthropic.py  test_article_application_service.py  test_article_card_enrichment.py  test_article_pattern_processor.py  test_audio_enricher.py  test_audio_service.py  test_backend_integration.py  test_backend_interface.py  test_backends.py  test_card_builder.py  test_card_generators.py  test_cardinal_number.py  test_conjunction.py  test_csv_service.py  test_dataclass_records.py  test_debug_deck_generator.py  test_deck_builder.py  test_deck_manager.py  test_domain_media_generator.py  test_environment_utils.py  test_exceptions.py  test_field_processor_interface.py  test_german_deck_builder.py  test_german_explanation_factory.py  (+44 more)
tests/integration/: test_anthropic.py  test_api_keyring.py  test_audio_enricher.py  test_csv_service.py  test_image_enricher.py  test_pexels.py  test_pexels_live.py  test_polly.py  test_polly_live.py  test_russian_deck_generation.py
tests/models/: test_adjective.py  test_interjection.py  test_irregular_verb.py  test_negation.py  test_personal_pronoun.py
tests/utils/: __init__.py  deck_inspector.py
(+230 files in other folders)
